--- a/client/package.json
+++ b/client/package.json
@@ -14,5 +14,10 @@
     "vite": "^4.0.0",
     "tailwindcss": "^3.0.0",
     "@vitejs/plugin-react": "^4.0.0"
-  }
+  },
+  "dependencies": {
+  "react": "^18.0.0",
+  "react-dom": "^18.0.0",
+  "wouter": "^3.2.0"
+}
 }
